[project]
name = "comfyui-levelpixel"
description = "Main nodes of the Level Pixel company (aka levelpixel, LP). Includes convenient nodes for working with images from folders; counting files in a folder; cleaning memory; tag filters. Model Unloader, Free memory, Tag Filters, Tag Category Filters, Tag Choice Parser, File counter, Image Loader From Path (with counters), Google Translator, Language Translator, Override Device, Delay, Lora Tag Loader. Licensed under GNU GPLv3. Repository: https://github.com/LevelPixel/ComfyUI-LevelPixel"
version = "1.2.6"
license = { file = "LICENSE.txt" }
dependencies = [
    "torch>=2.0.1",
    "numpy",
    "matplotlib",
    "langdetect",
    "deep_translator>=1.11.4",
    "wordninja" ]

[project.urls]
Repository = "https://github.com/LevelPixel/ComfyUI-LevelPixel"

[tool.comfy]
PublisherId = "levelpixel"
DisplayName = "ComfyUI Level Pixel"
Icon = ""