[project]
name = "comfyui-levelpixel"
description = "Main nodes of the Level Pixel company (levelpixel, LP). In this package you will find easy-to-use atomic nodes that can help automate various processes - memory cleaning automation (RAM free, VRAM free), Lora loading like in Automatic1111, powerful inpaint crop and stitch, pipeline, declaring standard variables, converting variables, google translate, filtering tags by categories, working with file system, counting files in file system, counting objects, counting images. The names of the key nodes in this package are: Inpaint-CropAndStitch, Inpaint Crop, Inpaint Stitch, Resize Image, Resize Mask, Model Unloader, Free memory, Tag Filters, Tag Category Filters, Tag Choice Parser, File counter, Image Loader From Path (with counters), Google Translator, Language Translator, Override Device, Delay, Lora Tag Loader, Pipeline, Resize Masks, Resize Image, Iterators. Licensed under GNU GPLv3. Repository: https://github.com/LevelPixel/ComfyUI-LevelPixel"
version = "1.3.1"
license = { file = "LICENSE.txt" }
dependencies = [
    "torch>=2.0.1",
    "numpy",
    "matplotlib",
    "langdetect",
    "deep_translator>=1.11.4",
    "wordninja" ]

[project.urls]
Repository = "https://github.com/LevelPixel/ComfyUI-LevelPixel"

[tool.comfy]
PublisherId = "levelpixel"
DisplayName = "ComfyUI Level Pixel"
Icon = "https://avatars.githubusercontent.com/u/175361036"
